@@ -9,6 +9,10 @@
     4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
        It is for convenience. Do not mistake this for the actual file.
 
+  28 Jul 2004; Masatomo Nakano <nakano@gentoo.org> bin/emergehelp.py,
+  man/emerge.1: Added explanation of --newuse to manpage/help. 
+  Added information of --verbose to manpage.
+
   27 Jul 2004; Jason Stubbs <jstubbs@gentoo.org> pym/portage.py:
   Reversed the order of profile virtuals (dirVirtuals) so that a cascading
   profile's virtuals are stacked in the correct order.
